--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -32,7 +32,7 @@
           <input [(ngModel)]="person.lastName" matInput placeholder="{{'last_name' | translate}}">
         </mat-form-field>
         <mat-radio-group [(ngModel)]="person.sex">
-          <mat-radio-button value="MALE" class="p-r-1">{{'male' | translate}}</mat-radio-button>
+          <mat-radio-button value="MALE" class="m-r-6">{{'male' | translate}}</mat-radio-button>
           <mat-radio-button value="FEMALE">{{'female' | translate}}</mat-radio-button>
         </mat-radio-group>
         <mat-form-field>
